[package]
name = "volo_example"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volo-gen = { path = "./volo-gen" }
faststr = "0.2"
ahash = "0.8"
async-trait = "0.1"
lazy_static = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

volo.workspace = true
volo-thrift.workspace = true
pilota.workspace = true

anyhow.workspace = true
tokio = { workspace = true, features = ["full"] }

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false

[workspace]
members = ["volo-gen"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
# we recommend to use the latest framework version for new features and bug fixes
volo = "*"
volo-build = "*"
volo-thrift = "*"
pilota = "*"

anyhow = "1"
tokio = "1"
